# lifelike-fix-modified-date

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  publish.yml  quality.yaml  quality.yml  sonar.yml
lifelike_fix_modified_date/: __init__.py  __main__.py
tests/: test_lifelike_fix_modified_date.py
