[tool.poetry]
name = "lifelike-fix-modified-date"
version = "0.0.0"
description = "Fixes all modified_date columns in a database to match the values in a backup database."
authors = ["SBRG <sbrg@lifelike.bio>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8"
docopt = "^0.6"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^1.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lifelike-fix-modified-date = "lifelike_fix_modified_date:__main__"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
vcs = "git"
style = "semver"